Started development of educators page

--- a/for_educators.html
+++ b/for_educators.html
@@ -1,40 +1,125 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/foreducators.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
 
-          gtag('config', 'UA-145467622-3');
-        </script>
-        <title>TestDrive</title>
-        <link rel="stylesheet" type="text/css" href="../style.css">
-        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
-        <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
-        <meta name='twitter:card' content="summary">
-        <meta name='twitter:title' content="Social Media TestDrive">
-        <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
-        <meta name='twitter:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
-        <meta property='og:url' content='https://socialmediatestdrive.org/for_educators.html'>
-        <meta property='og:title' content="Social Media TestDrive">
-        <meta property='og:description' content='Welcome to the Social Media TestDrive official website!'>
-        <meta property='og:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
-    </head>
-    <body>
-      <div id="topNav"></div>
-      <div class="lessonheader"><h1 class="lessontitle">For Educators</h1></div>
-      <div class="lessoncontent">
-        <p class="lessonsubheader">Educator Guide</p>
-          <p>Welcome to Social Media TestDrive, an educational program for teaching digital citizenship skills and online prosocial behaviors! TestDrive prepares young people for real-life experiences in the digital world through learning and practicing within a realistic social media simulation.</p>
-          <a class="fontbig" href="testdriveguide.pdf">Click here to access the educator guide!</a>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-145467622-3');
+  </script>
+</head>
+
+<body>
+  <!-- <header>
+    <div class="container-fluid">
+      <div class="row">
+        <div id="logo-container"> -->
+          <!-- <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">Social Media TestDrive</a> -->
+          <!-- <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
+        </div>
+        <div class="navbar-container">
+          <a class="navbar-links" href="about.html">About</a>
+          <a class="navbar-links" href="modules.html">Modules</a>
+          <a class="navbar-links" href="for_educators.html">For Educators</a>
+          <a class="navbar-links" href="for_parents.html">For Parents</a> -->
+          <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
+        <!-- </div>
+      </div>
+    </div>
+  </header> -->
+  <main>
+    <div class='container'>
+
+      <!-- Row 1 -->
+      <div class="row align-items-center paddedRow">
+        <div class="col-md-6">
+          <h1> All the tools you need to teach digital literacy, 100% free.</h1>
+          <h4> TestDrive makes it easy for educators to introduce a digital
+            literacy curriculum for their students. Moduels are aligned with
+            Commin Sense Education's curriculum.
+          </h4>
+          <button type="button" class="nicelyRoundedButton">
+            Get the educator guide
+          </button>
+        </div>
+        <div class='col-md-6'>
+          <img class="educators_image" src="img/educators_1.svg">
+        </div>
       </div>
 
-      <div id="bottomNav"></div>
-      <script src="nav.js"></script>
+      <!-- Row 2 -->
+      <div class="row align-items-center paddedRow">
+        <div class="col-md-6">
+          <img class="educators_image" src="img/placeholder.png">
+        </div>
+        <div class='col-md-6'>
+          <h1> Lessons for 21st-century students</h1>
+          <h4> TestDrive simulates a safe environment that still <b>feels real</b>
+            to what students will actually see when they enter social media.
+            Totally lit, fam.
+          </h4>
+        </div>
+      </div>
 
-    </body>
+      <!-- Row 3 -->
+      <div class="row align-items-center paddedRow">
+        <div class="col-md-6">
+          <h1> A space for reflection and open conversation</h1>
+          <h4> Everyone remembers the teacher who made a difference in their
+            life, especially with sensitive topics like bullying.
+          </h4>
+          <h4> With communication tools like Reflections, TestDrive helps you
+            lead <b>open, meaningful conversations</b> with students.
+          </h4>
+
+        </div>
+        <div class='col-md-6'>
+          <img class="educators_image" src="img/placeholder.png">
+        </div>
+      </div>
+
+      <!-- Testimonials -->
+      <div class="row align-items-center">
+        <div class="col d-flex justify-content-center">
+          <h1>Real teachers, real impact</h1>
+        </div>
+      </div>
+
+      <div class="row align-items-center">
+        <div class="col-sm-4 d-flex justify-content-center">
+          <div class="testimonialPanel">
+          </div>
+        </div>
+        <div class="col-sm-4 d-flex justify-content-center">
+          <div class="testimonialPanel">
+          </div>
+        </div>
+        <div class="col-sm-4 d-flex justify-content-center">
+          <div class="testimonialPanel">
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </main>
+  <!-- <footer class="footer">
+    <p id="footer-text">Social Media TestDrive</p>
+    <a id="footer-links" href="terms.html">Terms & Copyright</p>
+  </footer> -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
 </html>
