Initial dev complete for educator page, header and footer

--- a/for_educators.html
+++ b/for_educators.html
@@ -39,6 +39,36 @@
       </div>
     </div>
   </header> -->
+
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="index.html">
+        TestDrive
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="modules.html">Lessons</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="for_educators.html">For Educators</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="for_parents.html">For Parents</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faq.html">FAQ</a>
+          </li>
+        </ul>
+
+      </div>
+    </nav>
+  </header>
   <main>
     <div class='container'>
 
@@ -50,7 +80,8 @@
             literacy curriculum for their students. Moduels are aligned with
             Commin Sense Education's curriculum.
           </h4>
-          <button type="button" class="nicelyRoundedButton">
+          <button type="button" class="nicelyRoundedButton"
+          onclick="document.location='testdriveguide.pdf'" target="_blank">
             Get the educator guide
           </button>
         </div>
@@ -90,8 +121,8 @@
         </div>
       </div>
 
-      <!-- Testimonials -->
-      <div class="row align-items-center">
+      <!-- Testimonials (to be included later, need to sort out permissions)-->
+      <!-- <div class="row align-items-center" style="padding-bottom:2em;">
         <div class="col d-flex justify-content-center">
           <h1>Real teachers, real impact</h1>
         </div>
@@ -110,10 +141,58 @@
           <div class="testimonialPanel">
           </div>
         </div>
+      </div> -->
+
+      <!-- Got More Questions Section -->
+
+      <div class="row justify-content-center">
+        <div class="col text-center">
+          <h1> Still have more questions? </h1>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col-sm-4 text-center">
+          <h4>
+            Check out our FAQ for more details about TestDrive for educators.
+          </h4>
+        </div>
+      </div>
+
+      <div class="row justify-content-center" style="padding-bottom:2em;">
+        <div class="col d-flex justify-content-center">
+          <button type="button" class="nicelyRoundedButton">
+            Get help
+          </button>
+        </div>
       </div>
 
     </div>
   </main>
+  <footer class="page-footer footerVerB">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-auto mr-auto">
+          <p>Copyright&copy 2019 Social Media TestDrive</p>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Link 1</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Link 2</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Team</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Press</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Terms & Copyright</a>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!-- <footer class="footer">
     <p id="footer-text">Social Media TestDrive</p>
     <a id="footer-links" href="terms.html">Terms & Copyright</p>
