--- a/for_educators.html
+++ b/for_educators.html
@@ -161,7 +161,7 @@
 
       <div class="row justify-content-center" style="padding-bottom:2em;">
         <div class="col d-flex justify-content-center">
-          <button type="button" class="nicelyRoundedButton">
+          <button type="button" class="nicelyRoundedButton" onclick="document.location='faq.html'">
             Get help
           </button>
         </div>
