--- a/faq.html
+++ b/faq.html
@@ -163,7 +163,8 @@
             <!-- Third row, general -->
             <div class="row paddedRow">
               <div class="col-sm-6 leftSide">
-                <h3 class="questionTitle">Who created TestDrive?</h3>
+                <h3 class="questionTitle">
+                  Who created TestDrive?</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Integer iaculis quam id nisi lobortis, vel volutpat ex
@@ -305,7 +306,7 @@
                   Proin quis velit pulvinar, sodales nisl a, egestas lacus.
                 </p>
               </div>
-              <div class="col-6 rightSide">
+              <div class="col-sm-6 rightSide">
                 <h3 class="questionTitle">
                   Parent Question 2?
                 </h3>
