--- a/for_parents.html
+++ b/for_parents.html
@@ -1,64 +1,22 @@
 <!DOCTYPE html>
 
 <html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/forparents.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
 
-    <head>
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-        gtag('config', 'UA-145467622-3');
-      </script>
-      <title>TestDrive</title>
-      <link rel="stylesheet" type="text/css" href="../style.css">
-      <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
-      <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
-      <meta name='twitter:card' content="summary">
-      <meta name='twitter:title' content="Social Media TestDrive">
-      <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
-      <meta name='twitter:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
-      <meta property='og:url' content='https://socialmediatestdrive.org/for_parents.html'>
-      <meta property='og:title' content="Social Media TestDrive">
-      <meta property='og:description' content='Welcome to the Social Media TestDrive official website!'>
-      <meta property='og:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
-      <style>
-        .links:hover {
-            background-color: #89CCE2;
-        }
-      </style>
-    </head>
-    <body>
-      <div id="topNav"></div>
-      <div class="lessonheader"><h1 class="lessontitle">For Parents</h1></div>
-
-      <div class="lessoncontent">
-        <p class="lessonsubheader">What is Social Media TestDrive?</p>
-          <p>TestDrive is an educational program that offers a number of modules about key digital citizenship topics, such as managing privacy settings, smart self-presentation, upstanding to cyberbullying, and news literacy.</p>
-          <p>Each TestDrive module teaches a set of digital citizenship concepts and allows youth to practice and reflect upon what they have learned using a simulated social media experience within a safe and protected platform.</p>
-          <p>TestDrive was created by researchers in the <a class="fontbig" href="http://sml.comm.cornell.edu" target=blank>Cornell University Social Media Lab</a> in collaboration with <a class="fontbig" href="http://commonsense.org/education/" target=blank>Common Sense Education</a>.</p>
-        <p class="lessonsubheader">Who is TestDrive for?</p>
-          <p>TestDrive is for middle school-aged youth (ages 9–13) who are new to or not yet engaged with social media, but may enter into the social media world in the near future.</p>
-          <p>Children at these ages are aware of and likely becoming interested in social media, but are unlikely to have their own social media accounts, since most social media platforms require members to be at least 13 years old. This is a great time to learn the prosocial skills and behaviors in TestDrive.</p>
-        <p class="lessonsubheader">Can I use TestDrive at home with my child?</p>
-          <p>Absolutely!</p>
-          <p>All TestDrive modules are designed so that children can complete them by themselves, but we encourage parents to try out and discuss TestDrive with their children. The reflection questions at the end of each module are a great opportunity to have a deeper discussion of the material.</p>
-          <p>If you want to check TestDrive out before trying it with your child, you are welcome to try some of the <a class="fontbig" href="https://socialmediatestdrive.org/modules.html">modules</a> yourself.</p>
-        <p class="lessonsubheader">How does a TestDrive module work?</p>
-          <p>In a TestDrive module, young people first learn key terms and practice social media skills in a guided setting. Then, they explore a simulated social media site where they interact with content designed to provide opportunities to further practice their new social media skills. The final section in the module is a reflection activity where learners answer questions designed to help them reflect on what they learned and how they can apply their learning in real life.</p>
-        <p class="lessonsubheader">How can I see my child’s progress?</p>
-          <p>At the end of the reflection page, there is a feature (“Print your responses”) that enables young people to save or print their responses to the reflection questions. You can review the responses to see how well your child is understanding the module content. You can also use the reflection questions at the end of each module to have discussions with youth to promote a deeper engagement with the material.</p>
-        <p class="lessonsubheader">Will my child’s data be safe?</p>
-          <p>TestDrive does not collect or store any personal information. Young people are able to choose from a library of photos when creating posts, upload text, make comments on the simulated social media site, and change their profile name, location, and description, but all data are permanently deleted once users finish a module or leave the TestDrive website. We take privacy and safety seriously; see our <a class="fontbig" href="https://app.socialmediatestdrive.org/privacy" target=blank>privacy policy</a> for more details.</p>
-        <p class="lessonsubheader">Any questions?</p>
-          <p>We hope you and your child like TestDrive and find it valuable. TestDrive can be a great tool to generate meaningful discussions about responsible social media use. We encourage you to use this tool to keep the conversation going at home! Please contact us at <a class="fontbig" href="mailto:socialmediatestdrive@gmail.com">socialmediatestdrive@gmail.com</a> or using the form below if you have any questions or comments.</p>
-          <p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSOPFQg3o0TozaSkPqiGd9TY2F9SdLckJwwd78LZJECjiNVw/viewform?embedded=true" width="640" height="792" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
-      </div>
-
-      <div id="bottomNav"></div>
-      <script src="nav.js"></script>
-
-    </body>
-</html>
+  gtag('config', 'UA-145467622-3');
+  </script>
+</head>
