--- a/for_parents.html
+++ b/for_parents.html
@@ -20,3 +20,62 @@
   gtag('config', 'UA-145467622-3');
   </script>
 </head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="index.html">
+        TestDrive
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="modules.html">Lessons</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="for_educators.html">For Educators</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="for_parents.html">For Parents</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faq.html">FAQ</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <footer class="page-footer footerVerB">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-auto mr-auto">
+          <p>Copyright&copy 2019 Social Media TestDrive</p>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Link 1</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Link 2</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Team</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Press</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Terms & Copyright</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+</html>
