parents row 1 done

--- a/for_parents.html
+++ b/for_parents.html
@@ -50,6 +50,31 @@
       </div>
     </nav>
   </header>
+
+  <main>
+  <div class='container'>
+
+    <!-- Row 1 -->
+    <div class="row align-items-center paddedRow">
+      <div class="col-md-6">
+        <h1> Take your kids on a test drive for social media.</h1>
+        <h4> TestDrive modules are designed so that children can complete them
+          by themselves, but we encourage parents to try out and discuss
+          TestDrive with their children.
+        </h4>
+        <button type="button" class="nicelyRoundedButton"
+        onclick="document.location='testdriveguide.pdf'" target="_blank">
+          Try it out
+        </button>
+      </div>
+      <div class='col-md-6'>
+        <img class="educators_image" src="img/parents_1.svg">
+      </div>
+    </div>
+
+  </div>
+  </main>
+
   <footer class="page-footer footerVerB">
     <div class="container-fluid">
       <div class="row">
