parents row 2 - done

--- a/for_parents.html
+++ b/for_parents.html
@@ -72,6 +72,20 @@
       </div>
     </div>
 
+    <!-- Row 2 -->
+    <div class="row align-items-center paddedRow">
+      <div class="col-md-6">
+        <img class="parents_2" src="img/parents_2.png">
+      </div>
+      <div class='col-md-6'>
+        <h1> See social media from your kids' point of view.</h1>
+        <h4> TestDrive ipsum dolor sit amet, consectetur adipiscing elit, sed
+          do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+          enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+        </h4>
+      </div>
+    </div>
+
   </div>
   </main>
 
