--- a/for_parents.html
+++ b/for_parents.html
@@ -86,6 +86,48 @@
       </div>
     </div>
 
+    <!-- Row 3 -->
+    <div class="row align-items-center paddedRow">
+      <div class="col-md-6">
+        <h1> Teach social media skills, risk-free.</h1>
+        <h4> TestDrive <b>does not collect or store</b> any personal information.
+          Young people are able to create a profile,  but all data are
+          permanently deleted once users finish a module or leave the
+          TestDrive website.
+        </h4>
+        <h4> We take privacy and safety seriously; see our
+          <a href="/privacy">privacy policy</a> for more details.
+        </h4>
+
+      </div>
+      <div class='col-md-6'>
+        <img class="parents_3" src="img/parents_3.png">
+      </div>
+    </div>
+
+    <!-- Got More Questions Section -->
+    <div class="row justify-content-center">
+      <div class="col text-center">
+        <h1> Still have more questions? </h1>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-sm-4 text-center">
+        <h4>
+          Check out our FAQ for more details about TestDrive for parents.
+        </h4>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col d-flex justify-content-center">
+        <button type="button" class="nicelyRoundedButton" onclick="document.location='faq.html'">
+          Get help
+        </button>
+      </div>
+    </div>
+
   </div>
   </main>
 
