--- a/for_educators.html
+++ b/for_educators.html
@@ -93,7 +93,7 @@
       <!-- Row 2 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6">
-          <img class="educators_image" src="img/placeholder.png">
+          <img class="educators_image" src="img/educators_2.png">
         </div>
         <div class='col-md-6'>
           <h1> Lessons for 21st-century students</h1>
@@ -117,7 +117,7 @@
 
         </div>
         <div class='col-md-6'>
-          <img class="educators_image" src="img/placeholder.png">
+          <img class="margined-left educators_image" src="img/educators_3.png">
         </div>
       </div>
 
