--- a/index.html
+++ b/index.html
@@ -34,26 +34,38 @@
 <body>
   <!-- REDUNDANT, DELETE ONCE SERVER SET UP/FIXED -->
   <header>
-    <div class="container-fluid">
-      <div class="row">
-        <div id="logo-container">
-          <!-- <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">Social Media TestDrive</a> -->
-          <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
-        </div>
-        <div class="navbar-container">
-          <a class="navbar-links" href="about.html">About</a>
-          <a class="navbar-links" href="modules.html">Modules</a>
-          <a class="navbar-links" href="for_educators.html">For Educators</a>
-          <a class="navbar-links" href="for_parents.html">For Parents</a>
-          <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="index.html">
+        TestDrive
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="modules.html">Lessons</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="for_educators.html">For Educators</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="for_parents.html">For Parents</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faq.html">FAQ</a>
+          </li>
+        </ul>
+
       </div>
-    </div>
+    </nav>
   </header>
 
   <main>
-<<<<<<< HEAD
-   <div id="container">
+<!-- <<<<<<< HEAD -->
+   <!-- <div id="container">
     <div class="section1">
       <div id="intro">
         <h1>Practice digital literacy through a <span class="gold_accent">
@@ -64,8 +76,8 @@
         <button id="homePage_button" type="button" onclick="window.location.href = 'modules.html';">View Modules </button>
       </div>
       <div id="home_graphic">
-        <img id="home_img" src="img/home.png" alt="home graphic">
-=======
+        <img id="home_img" src="img/home.png" alt="home graphic"> -->
+<!-- ======= -->
     <div class="section1 container">
       <div class="row align-items-center">
         <div id="intro" class="col-sm">
@@ -76,11 +88,11 @@
         <div id="home_graphic" class="col-sm-6">
           <img id="home_img" src="img/home.png" alt="home graphic">
         </div>
->>>>>>> anna_dev
+<!-- >>>>>>> anna_dev -->
       </div>
     </div>
 
-    <div class="section2 container">
+    <!-- <div class="section2 container">
       <div class="row justify-content-center">
         <div class="col">
           <h1>Learn Essential Skills</h1>
@@ -92,9 +104,9 @@
           social media. Check out a few below!</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
-      <div id="moduleCarousel" class="carousel slide" data-ride="carousel">
+      <!-- <div id="moduleCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#moduleCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#moduleCarousel" data-slide-to="1" class="active"></li>
@@ -103,9 +115,9 @@
           <li data-target="#moduleCarousel" data-slide-to="4" class="active"></li>
           <li data-target="#moduleCarousel" data-slide-to="5" class="active"></li>
         </ol>
-        <div class="carousel-inner">
+        <div class="carousel-inner"> -->
           <!-- zero -->\
-          <div class="carousel-item active">
+          <!-- <div class="carousel-item active">
             <div class="carousel-content-container">
               <a  href="https://app.socialmediatestdrive.org/intro/safe-posting">
                 <div class="row align-items-center">
@@ -126,9 +138,9 @@
                 </div>
               </a>
             </div>
-          </div>
+          </div> -->
           <!-- one -->
-          <div class="carousel-item">
+          <!-- <div class="carousel-item">
             <div class="carousel-content-container">
               <a href="modules.html">
                 <div class="row align-items-center">
@@ -150,9 +162,9 @@
 
               </a>
             </div>
-          </div>
+          </div> -->
           <!-- two -->
-          <div class="carousel-item">
+          <!-- <div class="carousel-item">
             <div class="carousel-content-container">
               <a href="modules.html">
                 <div class="row align-items-center">
@@ -173,9 +185,9 @@
                 </div>
               </a>
             </div>
-          </div>
+          </div> -->
           <!-- three -->
-          <div class="carousel-item">
+          <!-- <div class="carousel-item">
             <div class="carousel-content-container">
               <a href="modules.html">
                 <div class="row align-items-center">
@@ -196,9 +208,9 @@
                 </div>
               </a>
             </div>
-          </div>
+          </div> -->
           <!-- four -->
-          <div class="carousel-item">
+          <!-- <div class="carousel-item">
             <div class="carousel-content-container">
               <a href="modules.html">
                 <div class="row align-items-center">
@@ -219,9 +231,9 @@
                 </div>
               </a>
             </div>
-          </div>
+          </div> -->
           <!-- five -->
-          <div class="carousel-item">
+          <!-- <div class="carousel-item">
             <div class="carousel-content-container">
               <a href="modules.html">
                 <div class="row align-items-center">
@@ -243,7 +255,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!--<a class="carousel-control-prev" href="#moduleCarousel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
@@ -252,12 +264,32 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>-->
-    </div>
+    <!-- </div> -->
   </main>
 
-  <footer class="footer">
-    <p id="footer-text">Social Media TestDrive</p>
-    <a id="footer-links" href="terms.html">Terms & Copyright</p>
+  <footer class="page-footer footerVerB">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-auto mr-auto">
+          <p>Copyright&copy 2019 Social Media TestDrive</p>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Link 1</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Link 2</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Team</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Press</a>
+        </div>
+        <div class="col-auto">
+          <a href="#" class="footer-link">Terms & Copyright</a>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <!--<script src="nav.js"></script>-->
