Header complete, fonts fixed

--- a/faq.html
+++ b/faq.html
@@ -34,7 +34,7 @@
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="modules.html">Lessons</a>
           </li>
@@ -92,7 +92,7 @@
 
             <!-- First row, general -->
             <div class="row paddedRow">
-              <div class="col-sm-6 leftSide">
+              <div class="col-md-6 leftSide">
                 <h3 class="questionTitle">What is Social Media TestDrive?</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -107,7 +107,7 @@
                   Proin quis velit pulvinar, sodales nisl a, egestas lacus.
                 </p>
               </div>
-              <div class="col-sm-6 rightSide">
+              <div class="col-md-6 rightSide">
                 <h3 class="questionTitle">Who is TestDrive for?</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -126,7 +126,7 @@
 
             <!-- Second row, general -->
             <div class="row paddedRow">
-              <div class="col-sm-6 leftSide">
+              <div class="col-md-6 leftSide">
                 <h3 class="questionTitle">How do TestDrive lessons work?</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -141,7 +141,7 @@
                   Proin quis velit pulvinar, sodales nisl a, egestas lacus.
                 </p>
               </div>
-              <div class="col-sm-6 rightSide">
+              <div class="col-md-6 rightSide">
                 <h3 class="questionTitle">
                   How does TestDrive keep young people's data safe?
                 </h3>
@@ -162,7 +162,7 @@
 
             <!-- Third row, general -->
             <div class="row paddedRow">
-              <div class="col-sm-6 leftSide">
+              <div class="col-md-6 leftSide">
                 <h3 class="questionTitle">
                   Who created TestDrive?</h3>
                 <p>
@@ -178,7 +178,7 @@
                   Proin quis velit pulvinar, sodales nisl a, egestas lacus.
                 </p>
               </div>
-              <div class="col-sm-6 rightSide">
+              <div class="col-md-6 rightSide">
                 <h3 class="questionTitle">
                   What should I do if I run into a problem with TestDrive?
                 </h3>
@@ -206,7 +206,7 @@
 
             <!-- First row, educators -->
             <div class="row paddedRow">
-              <div class="col-sm-6 leftSide">
+              <div class="col-md-6 leftSide">
                 <h3 class="questionTitle">
                   Educator Question 1?
                 </h3>
@@ -223,7 +223,7 @@
                   Proin quis velit pulvinar, sodales nisl a, egestas lacus.
                 </p>
               </div>
-              <div class="col-sm-6 rightSide">
+              <div class="col-md-6 rightSide">
                 <h3 class="questionTitle">
                   Educator Question 2?
                 </h3>
@@ -244,7 +244,7 @@
 
             <!-- Second row, educators -->
             <div class="row paddedRow">
-              <div class="col-sm-6 leftSide">
+              <div class="col-md-6 leftSide">
                 <h3 class="questionTitle">
                   Educator Question 3?
                 </h3>
@@ -261,7 +261,7 @@
                   Proin quis velit pulvinar, sodales nisl a, egestas lacus.
                 </p>
               </div>
-              <div class="col-sm-6 rightSide">
+              <div class="col-md-6 rightSide">
                 <h3 class="questionTitle">
                   Educator Question 4?
                 </h3>
@@ -289,7 +289,7 @@
 
             <!-- First row, parents -->
             <div class="row paddedRow">
-              <div class="col-sm-6 leftSide">
+              <div class="col-md-6 leftSide">
                 <h3 class="questionTitle">
                   Parent Question 1?
                 </h3>
@@ -306,7 +306,7 @@
                   Proin quis velit pulvinar, sodales nisl a, egestas lacus.
                 </p>
               </div>
-              <div class="col-sm-6 rightSide">
+              <div class="col-md-6 rightSide">
                 <h3 class="questionTitle">
                   Parent Question 2?
                 </h3>
