--- a/for_educators.html
+++ b/for_educators.html
@@ -22,28 +22,12 @@
 </head>
 
 <body>
-  <!-- <header>
-    <div class="container-fluid">
-      <div class="row">
-        <div id="logo-container"> -->
-          <!-- <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">Social Media TestDrive</a> -->
-          <!-- <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
-        </div>
-        <div class="navbar-container">
-          <a class="navbar-links" href="about.html">About</a>
-          <a class="navbar-links" href="modules.html">Modules</a>
-          <a class="navbar-links" href="for_educators.html">For Educators</a>
-          <a class="navbar-links" href="for_parents.html">For Parents</a> -->
-          <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
-        <!-- </div>
-      </div>
-    </div>
-  </header> -->
-
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html">
-        TestDrive
+
+      <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+      <a class="navbar-brand fancy" href="index.html">
+        Test<span class="fancy-color">Drive</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -51,7 +35,7 @@
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="modules.html">Lessons</a>
           </li>
@@ -78,7 +62,7 @@
           <h1> All the tools you need to teach digital literacy, 100% free.</h1>
           <h4> TestDrive makes it easy for educators to introduce a digital
             literacy curriculum for their students. Moduels are aligned with
-            Commin Sense Education's curriculum.
+            Common Sense Education's curriculum.
           </h4>
           <button type="button" class="nicelyRoundedButton"
           onclick="document.location='testdriveguide.pdf'" target="_blank">
