--- a/header.html
+++ b/header.html
@@ -14,9 +14,8 @@
   </div>
 </div> -->
 
-<div class="header-container">
+<!-- <div class="header-container">
   <div id="logo-container">
-    <!-- <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">Social Media TestDrive</a> -->
     <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
   </div>
   <div class="navbar-container">
@@ -24,6 +23,33 @@
     <a class="navbar-links" href="modules.html"><p>Modules</p></a>
     <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
     <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
-    <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
   </div>
-</div>
+</div> -->
+
+<nav class="navbar navbar-expand-lg navbar-light">
+  <a class="navbar-brand" href="index.html">
+    TestDrive
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse"
+    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+    aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="modules.html">Lessons</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="for_educators.html">For Educators</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="for_parents.html">For Parents</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="faq.html">FAQ</a>
+      </li>
+    </ul>
+
+  </div>
+</nav>
