--- a/index.html
+++ b/index.html
@@ -34,21 +34,33 @@
 <body>
   <!-- REDUNDANT, DELETE ONCE SERVER SET UP/FIXED -->
   <header>
-    <div class="container-fluid">
-      <div class="row">
-        <div id="logo-container">
-          <!-- <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">Social Media TestDrive</a> -->
-          <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
-        </div>
-        <div class="navbar-container">
-          <a class="navbar-links" href="about.html">About</a>
-          <a class="navbar-links" href="modules.html">Modules</a>
-          <a class="navbar-links" href="for_educators.html">For Educators</a>
-          <a class="navbar-links" href="for_parents.html">For Parents</a>
-          <!-- <a class="navbar-links" href="faq.html"><p>FAQs</p></a> -->
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="index.html">
+        TestDrive
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="modules.html">Lessons</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="for_educators.html">For Educators</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="for_parents.html">For Parents</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faq.html">FAQ</a>
+          </li>
+        </ul>
+
       </div>
-    </div>
+    </nav>
   </header>
 
   <main>
