Minor header improvements

--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
   <!-- REDUNDANT, DELETE ONCE SERVER SET UP/FIXED -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html">
-        TestDrive
+
+      <a href="index.html">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+      </a>
+      <a class="navbar-brand fancy" href="index.html">
+        Test<span class="fancy-color">Drive</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -64,20 +68,6 @@
   </header>
 
   <main>
-<<<<<<< HEAD
-   <div id="container">
-    <div class="section1">
-      <div id="intro">
-        <h1>Practice digital literacy through a <span class="gold_accent">
-          social media simulation</span>.</h1>
-        <p>Social Media TestDrive lets young people practice
-          digital citizenship skills in a simulated, realistic social media
-          environment.</p>
-        <button id="homePage_button" type="button" onclick="window.location.href = 'modules.html';">View Modules </button>
-      </div>
-      <div id="home_graphic">
-        <img id="home_img" src="img/home.png" alt="home graphic">
-=======
     <div class="section1 container">
       <div class="row align-items-center">
         <div id="intro" class="col-sm">
@@ -88,7 +78,6 @@
         <div id="home_graphic" class="col-sm-6">
           <img id="home_img" src="img/home.png" alt="home graphic">
         </div>
->>>>>>> anna_dev
       </div>
     </div>
 
