--- a/faq.html
+++ b/faq.html
@@ -25,8 +25,12 @@
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html">
-        TestDrive
+
+      <a href="index.html">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+      </a>
+      <a class="navbar-brand fancy" href="index.html">
+        Test<span class="fancy-color">Drive</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
