--- a/for_educators.html
+++ b/for_educators.html
@@ -25,7 +25,9 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
 
-      <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+      <a href="index.html">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+      </a>
       <a class="navbar-brand fancy" href="index.html">
         Test<span class="fancy-color">Drive</span>
       </a>
