updated index.html graphics & color, added header to for_parents.html

--- a/index.html
+++ b/index.html
@@ -35,17 +35,12 @@
   <!-- REDUNDANT, DELETE ONCE SERVER SET UP/FIXED -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
-<<<<<<< HEAD
 
       <a href="index.html">
         <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
       </a>
       <a class="navbar-brand fancy" href="index.html">
         Test<span class="fancy-color">Drive</span>
-=======
-      <a class="navbar-brand" href="index.html">
-        TestDrive
->>>>>>> michael_dev2
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -53,11 +48,7 @@
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-<<<<<<< HEAD
         <ul class="navbar-nav ml-auto">
-=======
-        <ul class="navbar-nav">
->>>>>>> michael_dev2
           <li class="nav-item">
             <a class="nav-link" href="modules.html">Lessons</a>
           </li>
@@ -77,13 +68,11 @@
   </header>
 
   <main>
-<<<<<<< HEAD
-=======
 <!-- <<<<<<< HEAD -->
    <!-- <div id="container">
     <div class="section1">
       <div id="intro">
-        <h1>Practice digital literacy through a <span class="gold_accent">
+        <h1>Practice digital literacy through a <span class="blue_accent">
           social media simulation</span>.</h1>
         <p>Social Media TestDrive lets young people practice
           digital citizenship skills in a simulated, realistic social media
@@ -93,21 +82,17 @@
       <div id="home_graphic">
         <img id="home_img" src="img/home.png" alt="home graphic"> -->
 <!-- ======= -->
->>>>>>> michael_dev2
     <div class="section1 container">
       <div class="row align-items-center">
         <div id="intro" class="col-sm">
-          <h1>Practice digital literacy through a <span class="gold_accent">social media simulation</span>.</h1>
+          <h1>Practice digital literacy through a <span class="blue_accent">social media simulation</span>.</h1>
           <h4>Social Media TestDrive lets young people practice digital citizenship skills in a simulated, realistic social media environment.</h4>
           <button id="homePage_button" type="button" onclick="window.location.href = 'modules.html';">View Modules </button>
         </div>
         <div id="home_graphic" class="col-sm-6">
-          <img id="home_img" src="img/home.png" alt="home graphic">
+          <img id="home_img" src="img/home_1.svg" alt="home graphic">
         </div>
-<<<<<<< HEAD
-=======
 <!-- >>>>>>> anna_dev -->
->>>>>>> michael_dev2
       </div>
     </div>
 
