--- a/for_parents.html
+++ b/for_parents.html
@@ -24,8 +24,12 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html">
-        TestDrive
+
+      <a href="index.html">
+        <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
+      </a>
+      <a class="navbar-brand fancy" href="index.html">
+        Test<span class="fancy-color">Drive</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -33,7 +37,7 @@
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="modules.html">Lessons</a>
           </li>
@@ -47,6 +51,7 @@
             <a class="nav-link" href="faq.html">FAQ</a>
           </li>
         </ul>
+
       </div>
     </nav>
   </header>
