Added headings to the lessons page

--- a/modules.html
+++ b/modules.html
@@ -59,7 +59,25 @@
 
   <main>
     <div class='container'>
-      <!-- previous and next buttons -->
+      <!-- Title -->
+      <div class="row paddedRow justify-content-center">
+        <div class="col-lg-8 text-center">
+          <h1> The best way to navigate the digital world. </h1>
+        </div>
+      </div>
+
+      <!-- Subtitle -->
+      <div class="row justify-content-center">
+        <div class="col-md-8 col-lg-6 text-center">
+          <h4>
+            From privacy to personal information, fake news to digital
+            footprints, and targeted ads to toxic comments, TestDrive
+            has your kids covered.
+          </h4>
+        </div>
+      </div>
+
+      <!-- previous and next buttons for the carousel -->
       <div class="row align-items-center justify-content-center" style="height:50px;">
         <div class-"col">
           <a href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -73,6 +91,7 @@
         </div>
       </div>
 
+      <!-- the row with the carousel -->
       <div class="row" style="min-height:1024px;">
         <div class="col">
           <div id="carouselExampleIndicators" class="carousel slide d-none d-md-block" data-ride="carousel" data-interval="false">
@@ -107,7 +126,7 @@
                         <span class="card-text">
                           Aligned Common Sense Education's Digital
                           Citizenship Lesson:
-                          <a href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying">
+                          <a href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying" target="_blank">
                             Upstanders and Allies: Taking Action Against Cyberbullying
                           </a>
                         </span>
@@ -136,7 +155,7 @@
                         <span class="card-text">
                           Aligned with Common Sense Education's Digital
                           Citizenship lesson:
-                          <a href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online">
+                          <a href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online"  target="_blank">
                             Chatting Safely Online
                           </a>
                         </span>
@@ -165,7 +184,7 @@
                           <span class="card-text">
                             Aligned with Common Sense Education's Digital
                             Citizenship lesson:
-                            <a href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities">
+                            <a href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities" target="_blank">
                               Social Media and Digital Footprints
                             </a>
                           </span>
@@ -194,7 +213,7 @@
                           <span class="card-text">
                             Aligned with Common Sense Education's Digital
                             Citizenship lesson:
-                            <a href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online">
+                            <a href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online" target="_blank">
                               Who Are You Online?
                             </a>
                           </span>
@@ -222,7 +241,7 @@
                           <span class="card-text">
                             Aligned with Common Sense Education's Digital
                             Citizenship lesson:
-                            <a href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share">
+                            <a href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share" target="_blank">
                               Being Aware of What You Share
                             </a>
                           </span>
@@ -252,7 +271,7 @@
                           <span class="card-text">
                             Aligned with Common Sense Education's Digital
                             Citizenship lesson:
-                            <a href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news">
+                            <a href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news" target="_blank">
                               Finding Credible News
                             </a>
                           </span>
@@ -284,7 +303,7 @@
                           <span class="card-text">
                             Aligned with Common Sense Education's Digital
                             Citizenship lesson:
-                            <a href="">
+                            <a href="" target="_blank">
                               Link Name
                             </a>
                           </span>
@@ -312,7 +331,7 @@
                           <span class="card-text">
                             Aligned with Common Sense Education's Digital
                             Citizenship lesson:
-                            <a href="">
+                            <a href="" target="_blank">
                               Link Name
                             </a>
                           </span>
@@ -338,7 +357,7 @@
                           <span class="card-text">
                             Aligned with Common Sense Education's Digital
                             Citizenship lesson:
-                            <a href="">
+                            <a href="" target="_blank">
                               Link Name
                             </a>
                           </span>
@@ -361,6 +380,34 @@
         </div>
       </div>
     </div>
+
+    <!-- Contact us section -->
+
+    <!-- Title -->
+    <div class="row paddedTop justify-content-center">
+      <div class="col text-center">
+        <h1> Did we miss anything? </h1>
+      </div>
+    </div>
+
+    <!-- Subtitle -->
+    <div class="row justify-content-center">
+      <div class="col-sm-4 text-center">
+        <h4>
+          We'd love to hear from you!
+        </h4>
+      </div>
+    </div>
+
+    <!-- Button -->
+    <div class="row justify-content-center" style="padding-bottom:2em;">
+      <div class="col d-flex justify-content-center">
+        <button type="button" class="nicelyRoundedButton" onclick="document.location='faq.html'">
+          Contact Us
+        </button>
+      </div>
+    </div>
+
   </div>
 </main>
 
