Improved prev and next button appearances on lessons

--- a/modules.html
+++ b/modules.html
@@ -78,16 +78,30 @@
       </div>
 
       <!-- previous and next buttons for the carousel -->
-      <div class="row align-items-center justify-content-center" style="height:50px;">
-        <div class-"col">
+      <div class="row align-items-center justify-content-center" style="height:70px !important;">
+        <div class="col-4 text-center d-none d-md-block">
           <a href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <div class="container">
+              <div class="customCarouselControls">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              </div>
+            </div>
             <span class="sr-only">Previous</span>
           </a>
+        </div>
+        <div class="col-4 text-center d-none d-md-block">
           <a href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <div class="container">
+              <div class="customCarouselControls">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              </div>
+            </div>
             <span class="sr-only">Next</span>
           </a>
+          <!-- <a href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a> -->
         </div>
       </div>
 
@@ -208,6 +222,7 @@
                           and how online identities can change with
                           different audiences.
                         </span>
+                        <br>
                         <br>
                         <span class="card-text">
                           <span class="card-text">
